[package]
name = "stockpile-v2"
version = "0.1.0"
description = "Funding Without Barriers."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stockpile_v2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
# pyth-sdk-solana = "0.10.1"
solana-program = "~1.18.20"
winnow = "=0.5.0"
toml_datetime = "=0.6.7"
solana-gateway = { version = "0.6.0", features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"

[patch.crates-io]
ahash = "=0.8.11"
borsh = "=1.5.1"
hashbrown = "=0.14.0"